--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,33 @@
-test_job1:
+stages:
+  - generator
+  - run-test-jobs
+
+generate:
+  stage: generator
   image: alpine:latest
   script:
-    - echo "I'm a job"
-    - echo "This is my Test."
+    - apk update && apk add python3~=3.10 py3-pip
+    - pip3 install pyaml
+    - python generator.py conf1 > child1.yml
+    - python generator.py conf2 > child2.yml
+  artifacts:
+    paths:
+      - child1.yml
+      - child2.yml
+    expire_in: 1 week
+
+run-child1:
+  stage: run-test-jobs
+  trigger:
+    include:
+      - artifact: child1.yml
+        job: generate
+    strategy: depend
+
+run-child2:
+  stage: run-test-jobs
+  trigger:
+    include:
+      - artifact: child2.yml
+        job: generate
+    strategy: depend
