implement jobGenerator.jl which allows to create integration tests in sub project
- the generator will be not executed in this project
- sub projects clone the generator and execute it in it's CI pipeline
- the generator finds all projects, which are depend on the project, which executes the pipeline
- the generator also creates test jobs, to test the depend projects of with the changes of
 project, who started the pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,8 @@
 run_test:
   image: julia:1.8
   script:
-    - julia --project=@. -e 'import Pkg; Pkg.Registry.add(Pkg.RegistrySpec(url="https://github.com/SimeonEhrig/GitLabCIRegistry.git")); Pkg.test(; coverage = true)'
+    # run first jobGenertor test, because the custom registry overwrites the default registry
+    - cd jobGenerator
+    - julia --project=. -e 'import Pkg; Pkg.test(; coverage = true)'
+    - cd ..
+    - julia --project=. -e 'import Pkg; Pkg.Registry.add(Pkg.RegistrySpec(url="https://github.com/SimeonEhrig/GitLabCIRegistry.git")); Pkg.test(; coverage = true)'
